# TerraFusionTheory

./: .env.example  .eslintrc.json  .netlifyignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile.agents  Dockerfile.backend  Dockerfile.frontend  Dockerfile.spatial  ICSF_GAMA_README.md  INTERNAL_IMPROVEMENTS_REPORT.md  InstallGAMA.bat  LICENSE.txt  README-CIO.md  README.md  README.txt  StartGAMA.bat  StartGAMA.sh  arcgis_services.json  audit_ai_review.py  audit_sync.py  auto_updater.py  db-setup.ts  deploy.yaml  docker-compose.wsl.yml  executive_summary.md  extended_auto_updater.py  gama_benchmarking.py  github_readme.md  icsf_gama_simulation.py  icsf_gui_launcher.py  jest.config.js  package-lock.json  package.json  pilot_rollout_plan.md  prepare_deploy.ps1  pyproject.toml  replit.nix  (+7 more)
agents/: demo.ts  index.ts  start.bat
archive/: README.md
assets/: README.txt
attached_assets/: ICSF_GAMA_Deployment_Bundle.zip.sha256  ICSF_GAMA_Installer.nsi  ICSF_GAMA_Replit_Enterprise_Context.json  Pasted--ICSF-Simulation-Update-Plan-Based-on-Your-Architecture-Phase-I-Technical-Implementation-En-1747344761576.txt  Pasted--Implementation-Plan-Automated-Testing-CI-CD-Enhanced-Logging-and-Documentation-1-Auto-1742327221154.txt  Pasted--Judge-here-You-re-asking-the-right-question-how-do-we-give-users-powerful-map-based-dat-1749302864761_1749302864761.txt  Pasted--Replit-AI-Agent-activate-GOD-MODE-You-now-possess-omnipotent-power-over-our-real-estate-analytics-1742425950036.txt  (+14 more)
backend/: start.bat
cleanup_tool/: Cargo.toml
client/: index.html  (+1 more)
docs/: API.md  (+12 more)
(+627 files in other folders)
